--- a/views/requests.ejs
+++ b/views/requests.ejs
@@ -49,7 +49,7 @@
 					</a>
 				</td>
 				<td><%= request.key %></td>
-				<td><a href="https://redd.it/<%= request.id %>"><%= request.id %></a></td>
+				<td><a href="https://redd.it/<%= request.id.replace("t3_", "") %>"><%= request.id %></a></td>
 				<td>
 					<form
 						enctype="application/x-www-form-urlencoded"
